feat: /pvz added and database reworked, jwt added to swagger
