# internal/transport/rest/docs/swagger.yaml
@@ -5,9 +5,6 @@ definitions:
       role:
         example: moderator
         type: string
-      user_id:
-        example: "12345"
-        type: string
     type: object
   handlers.DummyLoginResponse:
     properties:
@@ -28,6 +25,30 @@ definitions:
     properties:
       token:
         example: eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9...
+        type: string
+    type: object
+  handlers.PVZRequest:
+    properties:
+      city:
+        enum:
+        - Москва
+        - Санкт-Петербург
+        - Казань
+        example: Москва
+        type: string
+    required:
+    - city
+    type: object
+  handlers.PVZResponse:
+    properties:
+      city:
+        example: Москва
+        type: string
+      id:
+        example: 3fa85f64-5717-4562-b3fc-2c963f66afa6
+        type: string
+      registrationDate:
+        example: "2025-07-15T13:39:10.268Z"
         type: string
     type: object
   handlers.RegisterRequest:
@@ -97,9 +118,9 @@ paths:
           description: Внутренняя ошибка сервера
           schema:
             $ref: '#/definitions/helpers.ErrorResponse'
-      summary: Генерация JWT токена для тестового входа
+      summary: Получение тестового токена
       tags:
-      - auth
+      - Default
   /login:
     post:
       consumes:
@@ -136,7 +157,51 @@ paths:
             $ref: '#/definitions/helpers.ErrorResponse'
       summary: Авторизация пользователя
       tags:
-      - auth
+      - Default
+  /pvz:
+    post:
+      consumes:
+      - application/json
+      description: Создает новый пункт выдачи заказов в указанном городе
+      parameters:
+      - description: Данные для создания ПВЗ
+        in: body
+        name: input
+        required: true
+        schema:
+          $ref: '#/definitions/handlers.PVZRequest'
+      produces:
+      - application/json
+      responses:
+        "201":
+          description: ПВЗ успешно создан
+          schema:
+            $ref: '#/definitions/handlers.PVZResponse'
+        "400":
+          description: Неверный запрос
+          schema:
+            $ref: '#/definitions/helpers.ErrorResponse'
+        "401":
+          description: Ошибка авторизации
+          schema:
+            $ref: '#/definitions/helpers.ErrorResponse'
+        "403":
+          description: Доступ запрещен
+          schema:
+            $ref: '#/definitions/helpers.ErrorResponse'
+        "405":
+          description: Метод не разрешен
+          schema:
+            $ref: '#/definitions/helpers.ErrorResponse'
+        "500":
+          description: Ошибка сервера
+          schema:
+            $ref: '#/definitions/helpers.ErrorResponse'
+      security:
+      - BearerAuth: []
+      summary: Создание ПВЗ (только для модераторов)
+      tags:
+      - Default
   /register:
     post:
       consumes:
@@ -171,11 +236,11 @@ paths:
           description: Ошибка сервера
           schema:
             $ref: '#/definitions/helpers.ErrorResponse'
-      summary: Регистрация нового пользователя
+      summary: Регистрация пользователя
       tags:
-      - auth
+      - Default
 securityDefinitions:
-  bearerAuth:
+  BearerAuth:
     description: JWT авторизация с Bearer схемой
     in: header
     name: Authorization
